--- a/ventanas/informacion.html
+++ b/ventanas/informacion.html
@@ -27,14 +27,10 @@
         </div >
     </header>
 
-
-    <nav>
-        <ul >
-            <li><a href="../ventanas/fotos.html">FOTOS</a></li>
-            <li><a href="../ventanas/productos.html">PRODUCTOS</a></li>
-            <li><a href="../ventanas/comentarios.html">COMENTARIOS</a></li>
-        </ul>
-    </nav>
+    <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.0197192924597!2d-58.47688958420074!3d-34.62894196634142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9920141e1b1%3A0xb5f3aaeb4f4f51be!2sCentro%20Mayorista!5e0!3m2!1ses-419!2sar!4v1654642511248!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    
 </body>
 
 <footer class="footer"> Israel Mamani </footer>
