--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sager, página de inicio</title>
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
@@ -44,12 +45,26 @@
         </div>
         
         <div class="informacion">
-            <p>(Agregar información aca, desde cuando empezo) Catálogo de articulos de indumentaria masculina</p>
+            <p>Bienvenido a Sager, este sitio es una muestra de indumentaria masculina y accesorios tanto masculinos como femeninos</p>
         </div>
     </div>
+
+    <footer class="footer"> 
+        <nav class="navegacion">
+            <div class="container">
+                <a class="navbar-brand" href="https://www.instagram.com/ind.sager/" style="position: right;">
+                    <img src="./multimedia/ig logo.jpg" alt="" width="30" height="30">
+                </a>
+            </div>
+            <div class="container">
+                <a class="navbar-brand" href="https://api.whatsapp.com/send?phone=5491130478156" style="position: right;">
+                    <img src="./multimedia/wp logo.png" alt="" width="30" height="30">
+                </a>
+            </div>
+        </nav>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<footer class="footer"> 
-    Israel Mamani 
-</footer>
+
 </html>
