--- a/ventanas/comentarios.html
+++ b/ventanas/comentarios.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Comentarios</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
@@ -30,22 +31,22 @@
         <fieldset>
             <legend>Datos y comentarios</legend>
             <div>
-                <label for="userName"> Nombre </label>
-                <input type="text" id="userName" required>
+                <label for="userName" class="form-label"> Nombre </label>
+                <input type="text" class="form-control"id="userName" placeholder="Nombre" required>
             </div>
             <div>
-                <label for="userMail"> Mail </label>
-                <input type="email" id="userMail" required> 
+                <label for="userMail" class="form-label">Mail</label>
+                <input type="email" class="form-control" id="userMail" placeholder="Dirección de correo electrónico" required>
             </div>
             <div>
-                <label for="userComent"> Comentario </label>
-                <textarea name="userComent" cols="30" rows="5"></textarea>
+                <label for="textCometarios" class="form-label">Comentarios</label>
+                <textarea class="form-control" id="textCometarios" rows="3"></textarea>
             </div>
             <button>ENVIAR</button>
         </fieldset>
     </form>
     
-        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>    
 </body>
 <footer class="footer"> 
     Israel Mamani 
