--- a/ventanas/informacion.html
+++ b/ventanas/informacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Informacion y ubicacion</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
@@ -27,9 +27,15 @@
         </div >
     </header>
 
-    <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.0197192924597!2d-58.47688958420074!3d-34.62894196634142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9920141e1b1%3A0xb5f3aaeb4f4f51be!2sCentro%20Mayorista!5e0!3m2!1ses-419!2sar!4v1654642511248!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+    <section id="ubicacion">
+        <div class="mapa">
+            <iframe id= "mapa-aspecto"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.0197192924597!2d-58.47688958420074!3d-34.62894196634142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9920141e1b1%3A0xb5f3aaeb4f4f51be!2sCentro%20Mayorista!5e0!3m2!1ses-419!2sar!4v1654642511248!5m2!1ses-419!2sar" width="550" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <list class="ubicacion-Informacion">
+            <p>Dirección: Cuenca 241, local 1 y 2 (Centro Mayorista)</p>
+            <p>Horarios de atención: 8:00 - 16:00</p>
+        </list>
+    </section>
     
 </body>
 
