--- a/ventanas/mujer.html
+++ b/ventanas/mujer.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Accesorios de Mujer</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
@@ -26,6 +27,144 @@
             <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
         </div>
     </header>
+
+    <div id="grillaProductosMujer">
+        <list class="infoDeCarteraV">
+            <p class="tituloM">Cartera V </p>
+            <p>Cartera importada de eco-cuero</p>
+            <p>Incluye tarjetero y correa</p>
+            <p>Colores: beige, negro y rojo (Consultar colores)</p>
+        </list>
+        <div id="carouselCarteraV" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color beige">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_rojo.jpg" alt="Cartera logo V color rojo">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color negro">
+            </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselCarteraV" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselCarteraV" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        </div>
+
+        <list class="infoDeCarteraWaffle">
+            <p style="text-align: right;" class="tituloM">Cartera Waffle </p>
+            <p style="text-align: right;">Cartera importada de eco-cuero</p>
+            <p style="text-align: right;">Colores: blanco, negro y rosa (Consultar colores)</p>
+            <p style="text-align: right;">Incluye correa</p>
+        </list>
+        <div id="carouselCarteraWaffle" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_T.jpg" alt="Cartera relieve Waffle todos">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_negro.jpg" alt="Cartera relieve waffle color negro">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_blanco.jpg" alt="Cartera relieve waffle color blanco">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_rosa.jpg" alt="Cartera relieve waffle color rosa">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_negro_perspectiva.jpg" alt="Cartera relieve waffle color negro en perspectiva">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_rosa_perspectiva.jpg" alt="Cartera relieve waffle color rosa en perspectiva">
+            </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselCarteraWaffle" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselCarteraWaffle" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        </div>
+
+        <list class="infoDeCarteraCiervo">
+            <p class="tituloM">Cartera Ciervo </p>
+            <p>Cartera importada de eco-cuero</p>
+            <p>Incluye correa</p>
+            <p>Colores: camel, negro y rosa (Consultar colores)</p>
+        </list>
+        <div id="carouselCarteraCiervo" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Ciervo/ciervo_rosa.jpg" alt="Cartera logo ciervo color rosa">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Ciervo/ciervo_camel.jpg" alt="Cartera logo ciervo color camel">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Ciervo/ciervo_negro.jpg" alt="Cartera logo ciervo color negro">
+            </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselCarteraCiervo" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselCarteraCiervo" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        </div>
+
+        <list class="infoDeCarteraCuadro">
+            <p style="text-align: right;" class="tituloM">Cartera Cuadros </p>
+            <p style="text-align: right;">Cartera importada de eco-cuero</p>
+            <p style="text-align: right;">Colores: blanco, kaqui, negro, rojo y suela</p>
+            <p style="text-align: right;">Incluye correa y porta tarjeta</p>
+        </list>
+        <div id="carouselCarteraCuadro" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_T.jpg" alt="Cartera relieve a cuadros todos">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_negro.jpg" alt="Cartera relieve a cuadros color negro">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_blanco.jpg" alt="Cartera relieve a cuadros color blanco">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_suela.jpg" alt="Cartera relieve a cuadros color suela">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_kaqui.jpg" alt="Cartera relieve a cuadros color">
+            </div>
+            <div class="carousel-item">
+                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_rojo.jpg" alt="Cartera relieve a cuadros color rojo">
+            </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselCarteraCuadro" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselCarteraCuadro" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+        </a>
+        </div>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>    
 </body>
 <footer class="footer"> Israel Mamani </footer>
 </html>
