--- a/ventanas/mujer.html
+++ b/ventanas/mujer.html
@@ -35,7 +35,7 @@
             <p>Incluye tarjetero y correa</p>
             <p>Colores: beige, negro y rojo (Consultar colores)</p>
         </list>
-        <div id="carouselCarteraV" class="carousel slide" data-ride="carousel">
+        <div id="carouselCarteraV" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color beige">
@@ -48,14 +48,14 @@
             </div>
         </div>
 
-        <a class="carousel-control-prev" href="#carouselCarteraV" role="button" data-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraV" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carouselCarteraV" role="button" data-slide="next">
+            <span class="visually-hidden"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraV" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
+            <span class="visually-hidden"></span>
+        </button>
         </div>
 
         <list class="infoDeCarteraWaffle">
@@ -64,7 +64,8 @@
             <p style="text-align: right;">Colores: blanco, negro y rosa (Consultar colores)</p>
             <p style="text-align: right;">Incluye correa</p>
         </list>
-        <div id="carouselCarteraWaffle" class="carousel slide" data-ride="carousel">
+
+        <div id="carouselCarteraWaffle" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_T.jpg" alt="Cartera relieve Waffle todos">
@@ -86,14 +87,14 @@
             </div>
         </div>
 
-        <a class="carousel-control-prev" href="#carouselCarteraWaffle" role="button" data-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraWaffle" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carouselCarteraWaffle" role="button" data-slide="next">
+            <span class="visually-hidden"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraWaffle" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
+            <span class="visually-hidden"></span>
+        </button>
         </div>
 
         <list class="infoDeCarteraCiervo">
@@ -102,7 +103,8 @@
             <p>Incluye correa</p>
             <p>Colores: camel, negro y rosa (Consultar colores)</p>
         </list>
-        <div id="carouselCarteraCiervo" class="carousel slide" data-ride="carousel">
+
+        <div id="carouselCarteraCiervo" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Ciervo/ciervo_rosa.jpg" alt="Cartera logo ciervo color rosa">
@@ -115,14 +117,14 @@
             </div>
         </div>
 
-        <a class="carousel-control-prev" href="#carouselCarteraCiervo" role="button" data-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraCiervo" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carouselCarteraCiervo" role="button" data-slide="next">
+            <span class="visually-hidden"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraCiervo" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
+            <span class="visually-hidden"></span>
+        </button>
         </div>
 
         <list class="infoDeCarteraCuadro">
@@ -131,7 +133,8 @@
             <p style="text-align: right;">Colores: blanco, kaqui, negro, rojo y suela</p>
             <p style="text-align: right;">Incluye correa y porta tarjeta</p>
         </list>
-        <div id="carouselCarteraCuadro" class="carousel slide" data-ride="carousel">
+
+        <div id="carouselCarteraCuadro" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_T.jpg" alt="Cartera relieve a cuadros todos">
@@ -153,18 +156,18 @@
             </div>
         </div>
 
-        <a class="carousel-control-prev" href="#carouselCarteraCuadro" role="button" data-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraCuadro" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next" href="#carouselCarteraCuadro" role="button" data-slide="next">
+            <span class="visually-hidden"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraCuadro" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"></span>
-        </a>
+            <span class="visually-hidden"></span>
+        </button>
         </div>
 
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>    
+    <footer class="footer"> Israel Mamani </footer>
+    <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>    
 </body>
-<footer class="footer"> Israel Mamani </footer>
 </html>
