commit 5: Arreglo de header, más contenido index y arreglo de carousel

--- a/index.html
+++ b/index.html
@@ -17,21 +17,13 @@
             <div>
                 <a href="./index.html" class="headerTitle__font__logo">SAGER</a>
             </div>
-
-            <div>
+            <nav class="barraDeNavegacion">
                 <a href="./ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-            </div>
-            <div>
                 <a href="./ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-            </div>
-            <div>
                 <a href="./ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-            </div>
-            <div>
                 <a href="./ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
-            </div>
+            </nav> 
         </header>
-        
         <!-- cuerpo de la pagina -->
 
         <div>
@@ -45,20 +37,34 @@
         </div>
         
         <div class="informacion">
-            <p>Bienvenido a Sager, este sitio es una muestra de indumentaria masculina y accesorios tanto masculinos como femeninos</p>
+            <h1>Bienvenido a Sager</h1>
+            <h2>Indumentaria y Accesorios, masculino y femenino</h2>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ex non atque quas, corporis magni cum enim, a, maiores dicta, repellat facere laboriosam rerum iusto quaerat tenetur cupiditate nihil sequi.</h4>
         </div>
     </div>
 
+    <section class="novedades">
+        <h1>PROXIMAMENTE</h1>
+        <h2>Mochila porta-notebook</h2>
+        <div class="mochilas">
+            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook.jpg" alt="mochila porta notebook" class="imgMochilas" id="mochBolsillos">
+            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook2.jpg" alt="otra imagen de mochila porta notebook" class="imgMochilas">
+            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook_gris.jpg" alt="porta notebook gris" class="imgMochilas">
+            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook_negra.jpg" alt="porta notebook negra" class="imgMochilas">
+            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook_medidas.jpg" alt="medidas de la porta notebook" class="imgMochilas" id="mochMedida">
+        </div>
+    </section>
+
     <footer class="footer"> 
         <nav class="navegacion">
-            <div class="container">
+            <div class="contenedor">
                 <a class="navbar-brand" href="https://www.instagram.com/ind.sager/" style="position: right;">
-                    <img src="./multimedia/ig logo.jpg" alt="" width="30" height="30">
+                    <img src="./multimedia/ig logo.jpg" alt="" width="30" height="30" class="redes">
                 </a>
             </div>
-            <div class="container">
+            <div class="contenedor">
                 <a class="navbar-brand" href="https://api.whatsapp.com/send?phone=5491130478156" style="position: right;">
-                    <img src="./multimedia/wp logo.png" alt="" width="30" height="30">
+                    <img src="./multimedia/wp logo.png" alt="" width="30" height="30" class="redes">
                 </a>
             </div>
         </nav>
