--- a/ventanas/mujer.html
+++ b/ventanas/mujer.html
@@ -14,18 +14,12 @@
         <div>
             <a href="../index.html" class="headerTitle__font__logo">SAGER</a>
         </div>
-        <div>
+        <nav class="barraDeNavegacion">
             <a href="../ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-        </div>
-        <div>
             <a href="../ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-        </div>
-        <div>
             <a href="../ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-        </div>
-        <div>
             <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
-        </div>
+        </nav> 
     </header>
 
     <div id="grillaProductosMujer">
