--- a/ventanas/comentarios.html
+++ b/ventanas/comentarios.html
@@ -10,23 +10,19 @@
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
 <body class="body">
+    
     <header class="headerTitle">
         <div>
             <a href="../index.html" class="headerTitle__font__logo">SAGER</a>
         </div>
-        <div>
+        <nav class="barraDeNavegacion">
             <a href="../ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-        </div>
-        <div>
             <a href="../ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-        </div>
-        <div>
             <a href="../ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-        </div>
-        <div>
             <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
-        </div>
+        </nav> 
     </header>
+
     <form action="" method="get" enctype="text/plain">
         <fieldset>
             <legend>Datos y comentarios</legend>
