commit 8: sass al apartado mujer

--- a/ventanas/mujer.html
+++ b/ventanas/mujer.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesorios de Mujer</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/estiloSass.css">
+    <!--<link rel="stylesheet" href="../css/estilos.css">-->
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
 <body class="body">
@@ -21,6 +22,14 @@
             <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
         </nav> 
     </header>
+
+    <div>
+        <h2 class="titulo"> Mujer </h2>
+    </div>
+    <div class="infoM">
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ex non atque quas, corporis magni cum enim, a, maiores dicta, repellat facere laboriosam rerum iusto quaerat tenetur cupiditate nihil sequi.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ex non atque quas, corporis magni cum enim, a, maiores dicta, repellat facere laboriosam rerum iusto quaerat tenetur cupiditate nihil sequi.</h4>
+    </div>
 
     <div id="grillaProductosMujer">
         <list class="infoDeCarteraV">
