--- a/Articulos/mujer.html
+++ b/Articulos/mujer.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/estiloSass.css">
     <!--<link rel="stylesheet" href="../css/estilos.css">-->
     <link rel="stylesheet" href="https://fonts.google.com/">
+    <meta name="keywords" content="mujer, carteras, importado">
+    <meta name="description" content="Seccion de muestra de carteras importadas y colores">
 </head>
 <body class="body">
     <header class="headerTitle">
@@ -16,10 +18,10 @@
             <a href="../index.html" class="headerTitle__font__logo">SAGER</a>
         </div>
         <nav class="barraDeNavegacion">
-            <a href="../ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-            <a href="../ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-            <a href="../ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-            <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
+            <a href="../Articulos/hombre.html" class="headerTitle__font">HOMBRE</a>
+            <a href="../Articulos/mujer.html" class="headerTitle__font">MUJER</a>
+            <a href="../Encuentranos/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
+            <a href="../Comentarios/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
         </nav> 
     </header>
 
@@ -34,9 +36,9 @@
     <div id="grillaProductosMujer">
         <list class="infoDeCarteraV">
             <p class="tituloM">Cartera V </p>
-            <p>Cartera importada de eco-cuero</p>
-            <p>Incluye tarjetero y correa</p>
-            <p>Colores: beige, negro y rojo (Consultar colores)</p>
+            <p class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
+            <p class="tituloM__Descripcion">Incluye tarjetero y correa</p>
+            <p class="tituloM__Descripcion">Colores: beige, negro y rojo (Consultar colores)</p>
         </list>
         <div id="carouselCarteraV" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -63,9 +65,9 @@
 
         <list class="infoDeCarteraWaffle">
             <p style="text-align: right;" class="tituloM">Cartera Waffle </p>
-            <p style="text-align: right;">Cartera importada de eco-cuero</p>
-            <p style="text-align: right;">Colores: blanco, negro y rosa (Consultar colores)</p>
-            <p style="text-align: right;">Incluye correa</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Colores: blanco, negro y rosa (Consultar colores)</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Incluye correa</p>
         </list>
 
         <div id="carouselCarteraWaffle" class="carousel slide" data-bs-ride="carousel">
@@ -102,9 +104,9 @@
 
         <list class="infoDeCarteraCiervo">
             <p class="tituloM">Cartera Ciervo </p>
-            <p>Cartera importada de eco-cuero</p>
-            <p>Incluye correa</p>
-            <p>Colores: camel, negro y rosa (Consultar colores)</p>
+            <p class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
+            <p class="tituloM__Descripcion">Incluye correa</p>
+            <p class="tituloM__Descripcion">Colores: camel, negro y rosa (Consultar colores)</p>
         </list>
 
         <div id="carouselCarteraCiervo" class="carousel slide" data-bs-ride="carousel">
@@ -132,9 +134,9 @@
 
         <list class="infoDeCarteraCuadro">
             <p style="text-align: right;" class="tituloM">Cartera Cuadros </p>
-            <p style="text-align: right;">Cartera importada de eco-cuero</p>
-            <p style="text-align: right;">Colores: blanco, kaqui, negro, rojo y suela</p>
-            <p style="text-align: right;">Incluye correa y porta tarjeta</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Colores: blanco, kaqui, negro, rojo y suela</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Incluye correa y porta tarjeta</p>
         </list>
 
         <div id="carouselCarteraCuadro" class="carousel slide" data-bs-ride="carousel">
