--- a/Encuentranos/informacion.html
+++ b/Encuentranos/informacion.html
@@ -7,6 +7,8 @@
     <title>Informacion y ubicacion</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://fonts.google.com/">
+    <meta name="keywords" content="informacion, localizacion, local">
+    <meta name="description" content="Localización del local, horarios y atención al público">
 </head>
 <body class="body">
     <header class="headerTitle">
@@ -14,10 +16,10 @@
             <a href="../index.html" class="headerTitle__font__logo">SAGER</a>
         </div>
         <nav class="barraDeNavegacion">
-            <a href="../ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-            <a href="../ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-            <a href="../ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-            <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
+            <a href="../Articulos/hombre.html" class="headerTitle__font">HOMBRE</a>
+            <a href="../Articulos/mujer.html" class="headerTitle__font">MUJER</a>
+            <a href="../Encuentranos/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
+            <a href="../Comentarios/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
         </nav> 
     </header>
 
