--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Página de inicio, Accesorios juveniles, Indumentaria, importado">
+    <meta name="description" content="Indumentaria masculina y acccesorios importados masculinos y femeninos">
     <title>Sager, página de inicio</title>
     <link rel="stylesheet" href="./css/estiloSass.css">
-    <!--<link rel="stylesheet" href="./css/estilos.css"> -->
     <link rel="stylesheet" href="https://fonts.google.com/">
 </head>
 
@@ -19,10 +20,10 @@
                 <a href="./index.html" class="headerTitle__font__logo">SAGER</a>
             </div>
             <nav class="barraDeNavegacion">
-                <a href="./ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-                <a href="./ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-                <a href="./ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-                <a href="./ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
+                <a href="./Articulos/hombre.html" class="headerTitle__font">HOMBRE</a>
+                <a href="./Articulos/mujer.html" class="headerTitle__font">MUJER</a>
+                <a href="./Encuentranos/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
+                <a href="./Comentarios/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
             </nav> 
         </header>
         <!-- cuerpo de la pagina -->
