--- a/Comentarios/comentarios.html
+++ b/Comentarios/comentarios.html
@@ -8,6 +8,8 @@
     <title>Comentarios</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://fonts.google.com/">
+    <meta name="keywords" content="comentarios, opiniones">
+    <meta name="description" content="Seccion de comentarios para los usuarios">
 </head>
 <body class="body">
     
@@ -16,10 +18,10 @@
             <a href="../index.html" class="headerTitle__font__logo">SAGER</a>
         </div>
         <nav class="barraDeNavegacion">
-            <a href="../ventanas/hombre.html" class="headerTitle__font">HOMBRE</a>
-            <a href="../ventanas/mujer.html" class="headerTitle__font">MUJER</a>
-            <a href="../ventanas/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-            <a href="../ventanas/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
+            <a href="../Articulos/hombre.html" class="headerTitle__font">HOMBRE</a>
+            <a href="../Articulos/mujer.html" class="headerTitle__font">MUJER</a>
+            <a href="../Encuentranos/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
+            <a href="../Comentarios/comentarios.html" class="headerTitle__font">COMENTARIOS</a>>
         </nav> 
     </header>
 
