--- a/index.html
+++ b/index.html
@@ -14,18 +14,33 @@
 
 <body class="body">
     <!-- cabeza, aun no se como nombrarlo -->
-    <div id="grid">
-        <header class="headerTitle">
-            <div>
-                <a href="./index.html" class="headerTitle__font__logo">SAGER</a>
+    <header class="headerTitle">
+        <nav class="navbar navbar-expand-lg bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">SAGER</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="hom" aria-current="page" href="./Articulos/hombre.html">HOMBRE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Articulos/mujer.html">MUJER</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Encuentranos/informacion.html">DONDE ENCOTRARNOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./Comentarios/comentarios.html">COMENTARIOS</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <nav class="barraDeNavegacion">
-                <a href="./Articulos/hombre.html" class="headerTitle__font">HOMBRE</a>
-                <a href="./Articulos/mujer.html" class="headerTitle__font">MUJER</a>
-                <a href="./Encuentranos/informacion.html" class="headerTitle__font">DONDE ENCONTRARNOS</a>
-                <a href="./Comentarios/comentarios.html" class="headerTitle__font">COMENTARIOS</a>
-            </nav> 
-        </header>
+        </nav>
+    </header>
+    <div id="grid">
         <!-- cuerpo de la pagina -->
 
         <div>
