--- a/Comentarios/comentarios.html
+++ b/Comentarios/comentarios.html
@@ -42,7 +42,7 @@
 
     
 
-    <form action="" method="get" enctype="text/plain">
+    <form action="" method="get" enctype="text/plain" class="formComen">
         <fieldset>
             <legend>Datos y comentarios</legend>
             <div>
@@ -57,14 +57,26 @@
                 <label for="textCometarios" class="form-label">Comentarios</label>
                 <textarea class="form-control" id="textCometarios" rows="3"></textarea>
             </div>
-            <button>ENVIAR</button>
+            <button class="buttonEnviar">ENVIAR</button>
         </fieldset>
     </form>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>    
 </body>
 <footer class="footer"> 
-    Israel Mamani 
+    <h5>Sager</h5   >
+    <nav class="navegacion">
+        <div class="contenedor">
+            <a class="navbar-brand" href="https://www.instagram.com/ind.sager/" style="position: right;">
+                <img src="../multimedia/ig logo.jpg" alt="" width="30" height="30" class="redes">
+            </a>
+        </div>
+        <div class="contenedor">
+            <a class="navbar-brand" href="https://api.whatsapp.com/send?phone=5491130478156" style="position: right;">
+                <img src="../multimedia/wp logo.png" alt="" width="30" height="30" class="redes">
+            </a>
+        </div>
+    </nav>
 </footer>
 </html>
 <!--<nav>
