--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="informacion">
             <h1>Bienvenido a Sager</h1>
             <h2>Indumentaria y Accesorios, masculino y femenino</h2>
-            <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ex non atque quas, corporis magni cum enim, a, maiores dicta, repellat facere laboriosam rerum iusto quaerat tenetur cupiditate nihil sequi.</h4>
+            <h4>Aqui encontrarás lo necesario para un cambio. Verás lo que buscas y deséas</h4>
         </div>
     </div>
 
@@ -65,7 +65,7 @@
         <h2>Mochila porta-notebook</h2>
         <div class="mochilas">
             <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook.jpg" alt="mochila porta notebook" class="imgMochilas" id="mochBolsillos">
-            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook2.jpg" alt="otra imagen de mochila porta notebook" class="imgMochilas">
+            <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook2.jpg" alt="otra imagen de mochila porta notebook" class="imgMochilas" id="mochV">
             <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook_gris.jpg" alt="porta notebook gris" class="imgMochilas">
             <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook_negra.jpg" alt="porta notebook negra" class="imgMochilas">
             <img src="./multimedia/Mochilas/Porta notebook/Porta_notebook_medidas.jpg" alt="medidas de la porta notebook" class="imgMochilas" id="mochMedida">
@@ -73,6 +73,7 @@
     </section>
 
     <footer class="footer"> 
+        <h5>Sager</h5   >
         <nav class="navegacion">
             <div class="contenedor">
                 <a class="navbar-brand" href="https://www.instagram.com/ind.sager/" style="position: right;">
