--- a/Articulos/hombre.html
+++ b/Articulos/hombre.html
@@ -131,7 +131,21 @@
         
         
     </div>
-    <footer class="footer"> Israel Mamani </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
+<footer class="footer"> 
+    <h5>Sager</h5   >
+    <nav class="navegacion">
+        <div class="contenedor">
+            <a class="navbar-brand" href="https://www.instagram.com/ind.sager/" style="position: right;">
+                <img src="../multimedia/ig logo.jpg" alt="" width="30" height="30" class="redes">
+            </a>
+        </div>
+        <div class="contenedor">
+            <a class="navbar-brand" href="https://api.whatsapp.com/send?phone=5491130478156" style="position: right;">
+                <img src="../multimedia/wp logo.png" alt="" width="30" height="30" class="redes">
+            </a>
+        </div>
+    </nav>
+</footer>
 </html>
