--- a/Articulos/mujer.html
+++ b/Articulos/mujer.html
@@ -44,8 +44,7 @@
         <h2 class="titulo"> Mujer </h2>
     </div>
     <div class="infoM">
-        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ex non atque quas, corporis magni cum enim, a, maiores dicta, repellat facere laboriosam rerum iusto quaerat tenetur cupiditate nihil sequi.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt ex non atque quas, corporis magni cum enim, a, maiores dicta, repellat facere laboriosam rerum iusto quaerat tenetur cupiditate nihil sequi.</h4>
+        <h4>Carteras importadas que dan elegancia y estilo a tu outfit</h4>
     </div>
 
     <div id="grillaProductosMujer">
@@ -186,8 +185,21 @@
         </button>
         </div>
 
-    </div>
-    <footer class="footer"> Israel Mamani </footer>
-    <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>    
+    </div>  
 </body>
+<footer class="footer"> 
+    <h5>Sager</h5   >
+    <nav class="navegacion">
+        <div class="contenedor">
+            <a class="navbar-brand" href="https://www.instagram.com/ind.sager/" style="position: right;">
+                <img src="../multimedia/ig logo.jpg" alt="" width="30" height="30" class="redes">
+            </a>
+        </div>
+        <div class="contenedor">
+            <a class="navbar-brand" href="https://api.whatsapp.com/send?phone=5491130478156" style="position: right;">
+                <img src="../multimedia/wp logo.png" alt="" width="30" height="30" class="redes">
+            </a>
+        </div>
+    </nav>
+</footer>
 </html>
