--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="informacion">
             <h1>Bienvenido a Sager</h1>
             <h2>Indumentaria y Accesorios, masculino y femenino</h2>
-            <h4>Aqui encontrarás lo necesario para un cambio. Verás lo que buscas y deséas</h4>
+            <h4>Aqui encontrarás lo necesario para un cambio. Verás lo que buscas y deseas</h4>
         </div>
     </div>
 
