arreglo de funciones

--- a/Articulos/mujer.html
+++ b/Articulos/mujer.html
@@ -96,7 +96,7 @@
                 <option value="negro">Negro</option>
                 <option value="rojo">Rojo</option>
             </select>
-            <button class="agregar" id="agregarCarteraV" onclick="agregarCarteraVAlCarrito">Agregar al carrito</button>
+            <button class="agregar" id="agregarCarteraV" onclick="agregarCarteraVAlCarrito()">Agregar al carrito</button>
         </div>
 
 
@@ -153,7 +153,7 @@
                 <option value="negro">Negro</option>
                 <option value="rosa">Rosa</option>
             </select>
-            <button class="agregar" id="agregarCarteraWaffle" onclick="agregarCarteraWaffleAlCarrito">Agregar al carrito</button>
+            <button class="agregar" id="agregarCarteraWaffle" onclick="agregarCarteraWaffleAlCarrito()">Agregar al carrito</button>
         </div>
 
 
@@ -203,7 +203,7 @@
                 <option value="negro">Negro</option>
                 <option value="rosa">Rosa</option>
             </select>
-            <button class="agregar" id="agregarCarteraCiervo" onclick="agregarCarteraCiervoAlCarrito">Agregar al carrito</button>
+            <button class="agregar" id="agregarCarteraCiervo" onclick="agregarCarteraCiervoAlCarrito()">Agregar al carrito</button>
         </div>
 
 
@@ -264,7 +264,7 @@
                 <option value="rojo">Rojo</option>
                 <option value="suela">Suela</option>
             </select>
-            <button class="agregar" id="agregarCarteraCuadro" onclick="agregarCarteraCuadroAlCarrito">Agregar al carrito</button>
+            <button class="agregar" id="agregarCarteraCuadro" onclick="agregarCarteraCuadroAlCarrito()">Agregar al carrito</button>
         </div>
 
     </div> 
