arreglo de compra

--- a/Articulos/mujer.html
+++ b/Articulos/mujer.html
@@ -90,7 +90,7 @@
                 <option value="4">4</option>
                 <option value="5">5</option>
             </select>
-            <select name="cantidad" id="colorCarteraV">
+            <select name="cantidadV" id="colorCarteraV">
                 <option selected>Elegir color</option>
                 <option value="beige">Beige</option>
                 <option value="negro">Negro</option>
