arreglo de array de productos

--- a/Carrito/carrito.html
+++ b/Carrito/carrito.html
@@ -39,6 +39,8 @@
         </nav>
     </header>
 
+    <p id="carrito"></p>
+
     <button onclick="mostrarCarrito()">Mostrar</button>
     <script src="../javascript/javascriptCarrito.js"></script>
 </body>
