--- a/Articulos/mujer.html
+++ b/Articulos/mujer.html
@@ -23,9 +23,6 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" id="hom" aria-current="page" href="../Articulos/hombre.html">HOMBRE</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="../Articulos/mujer.html">MUJER</a>
                         </li>
                         <li class="nav-item">
@@ -268,7 +265,9 @@
         </div>
 
     </div> 
-    <script src="../javascript/javascriptCarrito.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/javascript/javascriptCarrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 <footer class="footer"> 
     <h5>Sager</h5   >
